--- a/index.html
+++ b/index.html
@@ -3,21 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css&quot
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css"&quot; rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
     <title>Portifolio</title>
 </head>
 <body>
-    <img src="img/pexels-eberhardgross-1398195.jpg" alt=""width="150">
-    <h1> Meu nome é Anna </h1>paixão pela [área de interesse, como tecnologia, design, escrita, etc.] me impulsiona a sempre buscar soluções inovadoras e eficientes
+    <header class="container text-center">
+    <img src="img/pexels-eliannedipp-7905795.jpg" alt=""width="200" height="200" class="rounded-circle">
+    <h1 class="lead">Anna a melhor</h1>
     <p>Olá, eu sou Anna, um(a) profissional apaixonado(a) por desafios e sempre em busca de aprendizado constante.
-Sou uma pessoa dedicada, criativa e com grande capacidade de adaptação. Tenho facilidade em trabalhar em equipe, resolução de problemas e atenção aos detalhes. Minha 
+Sou uma pessoa dedicada, criativa e com grande capacidade de adaptação. Tenho facilidade em trabalhar em equipe, resolução de problemas e atenção aos detalhes. Minha paixão pela [área de interesse, como tecnologia, design, escrita, etc.] me impulsiona a sempre buscar soluções inovadoras e eficientes
+</p>
+
 <p>Meus hobbies</p>
  <div>
-    <p>Jogar</p>
-    <p>Dormir</p>
-    <p>conversar</p>
-    <p>Comer</p>
+    <p class="badge bg-secondary">Jogar</p>
+    <p class="badge bg-secondary">Dormir</p>
+    <p class="badge bg-secondary">Desenhar</p>
+    <p class="badge bg-secondary">Conversar</p>
+    <p class="badge bg-secondary">Pintar</p>
     </div>
     <header>
-https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js&quot
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js&quot; integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
+
+</body>
 </html></p>
